'Ajustada responsividade da imagem do user e da senha'

--- a/src/Pages/Login/Login.module.css
+++ b/src/Pages/Login/Login.module.css
@@ -87,6 +87,12 @@ form input[type="submit"]{
   #logo {
     width: 100px;
   }
+  .imgPassword {
+    top: 260px;
+  }
+  .imgUser {
+    top: 160px;
+  }
 }
 
 
@@ -108,4 +114,18 @@ form input[type="submit"]{
     margin-top: 30px;
     margin-bottom: 30px;
   }
+
+  .boxCadastro {
+    min-width: 600px;
+    height: 400px;
+  }
+  .imgPassword {
+    left: 50px;
+    top: 215px;
+  }
+  .imgUser {
+    left: 50px;
+    top: 115px;
+  }
+
 }
