--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -7,67 +7,70 @@
   justify-content: space-between;
 }
 
+.divLogo {
+  min-width: auto;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  h1 {
+    margin: auto;
+    color: #669cf6;
+    margin-left: 1vw;
+
+    b {
+      color: #aa9999;
+    }
+  }
+}
+
+.navEuser {
+  height: 100%;
+  min-width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+
 nav {
-  align-self: end;
+  justify-self: right;
+  min-width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  
 }
 
 ul {
+  display: flex;
   list-style: none;
-  display: flex;
-  justify-content: space-between;
-  gap: 18vw;
-}
-
-li {
-  display: flex;
-
-  font-size: 2.6rem;
-  font-weight: 500;
-
-  min-width: 10vw;
-  height: 50px;
-
-  align-items: center;
-  justify-content: center;
-
-  background-color: #bde7ff;
-  transition: background-color .3s ease-in-out;
-  &:hover {
-    background-color: #88cdff;
-  }
+  gap: 200px
 }
 
 li a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-width: 10vw;
-  height: 50px;
-  white-space: nowrap;
-  color: #000;
+  text-decoration: none;
+  font-size: 3rem;
+  font-weight: bold;
+  color: #3376ea;
 
-  &:visited {
-    color: #000;
+  transition: color .2s ease-in-out;
+  &:hover {
+    color: #669cf6;
   }
-}
-
-#logo {
-  width: 150px;
-  height: auto;
-  margin-left: 1vw;
 }
 
 #imgUsuario {
   width: 65px;
   height: auto;
+  margin-right: 1vw;
 }
 
 #divImgUsuario {
-  width: 150px;
-  height: auto;
+  height: 100%;
   display: flex;
-  justify-content: end;
-  padding-right: 1vw;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -84,7 +87,7 @@ li a {
   }
 
   ul {
-    gap: 12vw;
+    gap: 150px;
   }
 }
 
@@ -121,7 +124,7 @@ li a {
     gap: 10vw;
   }
 
-  #logo, #divImgUsuario {
+  #divImgUsuario {
     width: 100px;
   }
 
@@ -152,11 +155,6 @@ li a {
 
   ul {
     gap: 6vw;
-  }
-
-  #logo {
-    width: 70px;
-    margin-left: 2vw;
   }
   
   #divImgUsuario {
