--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,22 +1,21 @@
 .cabecalho {
-  min-width: 100vw;
-  height: 11vh;
+  width: 100vw;
+  height: 130px;
   background-color: #fff;
   display: flex;
-  align-items: center;
+  align-items: center; 
   justify-content: space-between;
+  padding: 0 2vw;
 }
 
 .divLogo {
-  min-width: auto;
   height: 100%;
   display: flex;
   align-items: center;
-  text-align: center;
 
   h1 {
-    margin: auto;
     color: #669cf6;
+    font-size: 3rem; 
     margin-left: 1vw;
 
     b {
@@ -25,144 +24,82 @@
   }
 }
 
-.navEuser {
-  height: 100%;
-  min-width: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-}
-
 nav {
-  justify-self: right;
-  min-width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
-  
 }
 
 ul {
   display: flex;
   list-style: none;
-  gap: 200px
+  gap: 3vw;
 }
 
 li a {
   text-decoration: none;
-  font-size: 3rem;
+  font-size: 2rem; 
   font-weight: bold;
   color: #3376ea;
+  transition: color 0.2s ease-in-out;
+}
 
-  transition: color .2s ease-in-out;
-  &:hover {
-    color: #669cf6;
-  }
+li a:hover {
+  color: #669cf6;
 }
 
 #imgUsuario {
-  width: 65px;
+  width: 50px;
   height: auto;
-  margin-right: 1vw;
 }
 
 #divImgUsuario {
-  height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; 
 }
 
 
-/* MEDIA QUERIES */
 
-
-@media screen and (max-width:1625px) {  
-  li {
-    min-width: 13vw;
-  }
-
-  li a {
-    min-width: 13vw;
-  }
-
-  ul {
-    gap: 150px;
-  }
-}
-
-
-@media screen and (max-width:1100px) {
-  li {
-    min-width: 14vw;
-  }
-
-  li a {
-    min-width: 14vw;
-  }
-
-  ul {
-    gap: 8vw;
-  }
-}
-
-
-@media screen and (max-width:922px) {
-  html {
-    font-size: 50%;
-  }
-
-  li {
-    min-width: 10vw;
-  }
-
-  li a {
-    min-width: 10vw;
-  }
-
-  ul {
-    gap: 10vw;
-  }
-
-  #divImgUsuario {
-    width: 100px;
-  }
-
-  #imgUsuario {
-    width: 50px;
-  }
-}
-
-
-@media screen and (max-width:670px) {
-  html {
-    font-size: 40%;
-  }
-
+@media (max-width: 768px) {
   .cabecalho {
-    height: 8vh;
-  }
-  
-  li {
-    min-width: 8vw;
-    height: 35px;
-    font-size: 2rem;
+    flex-direction: row;
+    height: auto;
+    padding: 10px;
   }
 
-  li a {
-    min-width: 8vw;
+  .divLogo {
+    justify-content: center;
+  }
+
+  .navEuser {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
   }
 
   ul {
-    gap: 6vw;
+    flex-direction: column; 
   }
-  
-  #divImgUsuario {
-    width: 70px;
+
+  li a {
+    font-size: 1.75rem;
   }
 
   #imgUsuario {
-    width: 45px;
-    padding-right: 2vw;
+    width: 40px;
+  }
+}
+
+@media (max-width: 480px) {
+  .divLogo h1 {
+    font-size: 2.5rem;
+  }
+
+  li a {
+    font-size: 1.5rem; 
+  }
+
+  #imgUsuario {
+    width: 35px;
   }
 }
