--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -131,7 +131,7 @@ h1 {
     margin-top: 0px;
   }
 
-  .box-botao {
+  .boxBotao {
     margin-top: 60px;
   }
   #background {
@@ -152,32 +152,12 @@ h1 {
     font-size: 50%;
   }
 
-  li {
-    min-width: 10vw;
-  }
-
-  li a {
-    min-width: 10vw;
-  }
-
-  ul {
-    gap: 10vw;
-  }
-
   .box {
     width: 300px;
     height: 180px;
   }
 
-  #logo, #div-img-usuario {
-    width: 100px;
-  }
-
-  #img-usuario {
-    width: 50px;
-  }
-
-  .box-botao {
+  .boxBotao {
     width: 550px;
   }
 
@@ -199,38 +179,6 @@ h1 {
     font-size: 40%;
   }
 
-  .cabecalho {
-    height: 8vh;
-  }
-  
-  li {
-    min-width: 8vw;
-    height: 35px;
-    font-size: 2rem;
-  }
-
-  li a {
-    min-width: 8vw;
-  }
-
-  ul {
-    gap: 6vw;
-  }
-
-  #logo {
-    width: 70px;
-    margin-left: 2vw;
-  }
-  
-  #div-img-usuario {
-    width: 70px;
-  }
-
-  #img-usuario {
-    width: 45px;
-    padding-right: 2vw;
-  }
-
   h1 {
     margin-top: 30px;
     margin-bottom: 30px;
@@ -245,7 +193,7 @@ h1 {
     font-size: 2.4rem;
   }
 
-  .box-botao {
+  .boxBotao {
     width: 250px;
     height: 80px;
     margin-top: 5px;
