--- a/src/Components/Chat/Chat.module.css
+++ b/src/Components/Chat/Chat.module.css
@@ -35,23 +35,29 @@
 .divInput {
     width: 80%;
     height: 10%;
+    text-wrap: nowrap;
 
     input {
-        width: 90%;
+        min-width: 90%;
         height: 100%;
         background-color: #ddd;
         padding-left: 10px;
         border-radius: 10px 0 0 10px;
-        font-size: 30px;
+        font-size: 15px;
+
+    }
+
+    button p {
+        margin: 10px;
     }
 
     button {
-        width: 10%;
+        min-width: 10%;
         height: 100%;
         background-color: rgb(8, 127, 206);
         border-radius: 0 10px 10px 0;
         color: #fff;
-        font-size: 24px;
+        font-size: 15px;
     }
 }
 
@@ -74,4 +80,25 @@
 
 .divMensagens {
     scrollbar-width: none; /* Oculta a barra de rolagem no Firefox */
+}
+
+
+@media screen and (max-width: 1310px) {
+    .divInput {
+        background-color: blueviolet;
+    }
+}
+
+
+@media screen and (max-width: 950px) {
+    .inicioChat h1 {
+        font-size: 40px;
+    }
+} 
+
+
+@media screen and (max-width: 700px) {
+    .container {
+        width: 100%;
+    }
 }
